--- a/index.html
+++ b/index.html
@@ -4,14 +4,61 @@
     <meta charset="UTF-8">
     <title>Journal d'Akira Katsuki</title>
     <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; }
-        h1, h2 { color: #333; }
-        h1 { text-align: center; }
-        h2 { margin-top: 40px; }
-        .day { margin-bottom: 20px; }
-        .day h3 { margin-bottom: 5px; font-size: 1.1em; }
-        .day p { margin: 0 0 10px 0; }
-    </style>
+
+        /*
+         * Styles inspirés d'un carnet intime. L'objectif est de donner
+         * l'impression d'écrire sur un papier ligné avec une police douce,
+         * tout en conservant une bonne lisibilité. Les couleurs sobres
+         * renforcent l'atmosphère de journal.
+         */
+        body {
+            font-family: 'Georgia', serif;
+            line-height: 1.6;
+            /* Centrer et limiter la largeur pour un aspect page de journal */
+            margin: 20px auto;
+            max-width: 800px;
+            /* Couleur de fond rappelant le papier crème */
+            background-color: #faf3e0;
+            /* Effet de lignes horizontales rappelant un carnet ligné */
+            background-image: linear-gradient(#e6dcc8 1px, transparent 1px);
+            background-size: 100% 24px;
+            color: #3b301f;
+            padding: 20px;
+            border: 1px solid #dcd0b4;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 6px;
+        }
+        h1, h2, h3 {
+            font-family: 'Georgia', serif;
+            color: #4a3f2e;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        h2 {
+            margin-top: 40px;
+            border-bottom: 2px solid #dcd0b4;
+            padding-bottom: 5px;
+        }
+        .day {
+            margin-bottom: 20px;
+            padding-bottom: 15px;
+            border-bottom: 1px solid #dcd0b4;
+        }
+        .day:last-child {
+            border-bottom: none;
+        }
+        .day h3 {
+            margin-bottom: 5px;
+            font-size: 1.1em;
+            font-style: italic;
+        }
+        .day p {
+            margin: 0 0 10px 0;
+            text-align: justify;
+        }
+</style>
 </head>
 <body>
     <h1>Journal d'Akira Katsuki – Chronique des 62 jours</h1>
