--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <h1>Journal d'Akira Katsuki – Chronique des 62 jours</h1>
-    <p>Ce journal retrace, jour après jour, les deux mois que j'ai traversés en tant que défenseuse de la Royale Académie. Chaque entrée est écrite à la première personne et reflète mon regard analytique, ma détermination et l'importance du feu qui brûle en moi. Je partage ici mes pensées, mes actions et les épreuves affrontées, tout en restant fidèle à ma nature calme et protectrice. Que ces mots témoignent de ma volonté de protéger ceux qui comptent, coûte que coûte.</p>
+    <p>Ce journal retrace, jour après jour, les deux mois que j'ai traversés en tant que défenseuse de la Royale Académie. Chaque entrée est écrite à la première personne et reflète mon regard analytique, ma détermination et l'importance du feu qui brûle en moi. Je partage ici mes pensées, mes actions et les épreuves affrontées, tout en restant fidèle à ma nature. Que ces mots témoignent de ma volonté de protéger ceux qui comptent, coûte que coûte.</p>
 
     <h2>Semaine 1 – Disparition et détermination</h2>
     <div class="day">
