--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
 <div class="page">
     <h1>Journal de la période d’ellipse – Akira Katsuki</h1>
-    <p>Ce journal retrace les soixante-deux jours écoulés entre la fin de la saison et le début de la suivante. Chaque semaine comporte au maximum sept jours. J’y note mes pensées, mes épreuves et les flammes qui brûlent en moi. Je commence ce récit un mercredi.</p>
+    <p>Ce journal retrace les soixante-deux jours écoulés entre la fin de la saison et le début de la suivante. J’y note mes pensées, mes épreuves et les flammes qui brûlent en moi. Je commence ce récit un mercredi.</p>
 
     <!-- Semaine 1 -->
     <h2>Semaine&nbsp;1&nbsp;– L’arrivée et l’adaptation</h2>
